// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a default tag facet correctly 1`] = `
<span
  className="src-components-entity-card-tag-facet__tag-default src-components-entity-card-tag-facet__tag"
>
  <div
    id="child"
  />
</span>
`;

exports[`should render an error tag facet correctly 1`] = `
<span
  className="src-components-entity-card-tag-facet__tag-error src-components-entity-card-tag-facet__tag"
>
  <div
    id="child"
  />
</span>
`;
